--- a/TaeJoon/money_manager/Android/app/src/main/res/layout/money_detail.xml
+++ b/TaeJoon/money_manager/Android/app/src/main/res/layout/money_detail.xml
@@ -12,129 +12,259 @@
         android:orientation="vertical"
         android:gravity="center">
 
-        <Button
-            android:id="@+id/btnChangeDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="날짜 대화상자"
-            android:onClick="btnChangeDateClicked"/>
 
-        <RelativeLayout
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text=""/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:layout_marginBottom="14dp"
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/dateTv"
-                android:text="date"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingLeft="18dp"
+                android:text="date"
+                android:layout_weight="2"
                 />
+
             <EditText
                 android:id="@+id/dateEv"
-                android:hint="input date"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_below="@id/dateTv"
-                android:paddingLeft="12dp" />
-        </RelativeLayout>
-        <RelativeLayout
+                android:hint="input date"
+                android:paddingLeft="12dp"
+                android:layout_weight="5"
+                />
+            <Button
+                android:id="@+id/btnChangeDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:onClick="btnChangeDateClicked"
+                android:text="날짜 변경"
+                android:layout_weight="2.5"
+                />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginBottom="14dp"
-            >
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/incomeTv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="18dp"
+                android:text="income"
+                android:layout_weight="2"
+                />
+
+            <TextView
+                android:id="@+id/incomeEv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:hint="input income"
+                android:paddingLeft="12dp"
+                android:layout_weight="5"
+                />
+            <Button
+                android:id="@+id/btnSelectIncome"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="수입/지출"
+                android:layout_weight="2.5"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="14dp"
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/categoryTv"
-                android:text="category"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingLeft="18dp"
+                android:text="category"
+                android:layout_weight="2"
                 />
+
             <EditText
                 android:id="@+id/categoryEv"
-                android:hint="input category"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_below="@id/categoryTv"
-                android:paddingLeft="12dp" />
-        </RelativeLayout>
-        <RelativeLayout
+                android:hint="input category"
+                android:paddingLeft="12dp"
+                android:layout_weight="5"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_weight="2.5"
+                android:visibility="invisible"
+                />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginBottom="14dp"
-            >
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/contentsTv"
-                android:text="contents"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingLeft="18dp"
+                android:text="contents"
+                android:layout_weight="2"
                 />
+
             <EditText
                 android:id="@+id/contentsEv"
-                android:hint="input contents"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_below="@id/contentsTv"
-                android:paddingLeft="12dp" />
-        </RelativeLayout>
-        <RelativeLayout
+                android:hint="input contents"
+                android:paddingLeft="12dp"
+                android:layout_weight="5"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_weight="2.5"
+                android:visibility="invisible"
+                />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginBottom="14dp"
-            >
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/priceTv"
-                android:text="price"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingLeft="18dp"
+                android:text="price"
+                android:layout_weight="2"
                 />
+
             <EditText
                 android:id="@+id/priceEv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:hint="input price"
                 android:inputType="number"
-                android:layout_width="match_parent"
+                android:paddingLeft="12dp"
+                android:layout_weight="5"
+                />
+            <Button
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_below="@id/priceTv"
-                android:paddingLeft="12dp" />
-        </RelativeLayout>
+                android:text=""
+                android:layout_weight="2.5"
+                android:visibility="invisible"
+                />
+        </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginBottom="14dp"
-            >
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/etcTv"
-                android:text="etc"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingLeft="18dp"
+                android:text="etc"
+                android:layout_weight="2"
                 />
+
             <EditText
                 android:id="@+id/etcEv"
-                android:hint="input etc"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_below="@id/etcTv"
-                android:paddingLeft="12dp" />
-        </RelativeLayout>
+                android:hint="input etc"
+                android:paddingLeft="12dp"
+                android:layout_weight="5"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_weight="2.5"
+                android:visibility="invisible"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="14dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/receiptTv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="18dp"
+                android:text="receipt"
+                android:layout_weight="2"
+                />
+
+            <TextView
+                android:id="@+id/receiptNameTv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:hint="input receipt"
+                android:inputType="none"
+                android:paddingLeft="12dp"
+                android:layout_weight="5"/>
+
+            <Button
+                android:id="@+id/receiptSelect"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="사진 선택"
+                android:layout_weight="2.5"/>
+
+        </LinearLayout>
+
+
+
+
+
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -148,26 +278,21 @@
                 android:text="change"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="10dp"
                 android:onClick="changeBtnClicked"
                 />
+
             <Button
                 android:id="@+id/deleteBtn"
                 android:text="delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:onClick="deleteBtnClicked"
                 />
 
         </LinearLayout>
-        <TextView
-            android:id="@+id/receiptTv"
-            android:text="image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="18dp"
-            />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
